--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
               </li>
 
               <li class="sub-nav__item">
-                <a href="#" class="sub-nav__item-link">Tags</a>
+                <a href="tags.html" class="sub-nav__item-link">Tags</a>
               </li>
 
               <li class="sub-nav__item">
-                <a href="#" class="sub-nav__item-link">Subscribe</a>
+                <a href="sign-in.html" class="sub-nav__item-link">Sign In</a>
               </li>
 
               <li class="sub-nav__item">
-                <a href="#" class="sub-nav__item-link">Contact</a>
+                <a href="sign-up.html" class="sub-nav__item-link">Sign Up</a>
               </li>
             </ul>
           </div>
